--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: base-home
 title: Home
 ---
-
+<div class="row col-xl-12 col-lg-12 col-md-12 col-sm-12">
   <div class='window' id="main_window">
     <div class='headu'>
       <a href="#" class='btnu'>&#10005;</a>
@@ -18,7 +18,7 @@ title: Home
       <div class="element4 bold nodisplay"></div>
       <div class="elementx nodisplay"></div>
       <p>
-      <div class="options nodisplay">>>> Please select an option and press Enter. (e.g: 3 or contact)
+      <div class="options nodisplay" > >>> Please select an option and press Enter. (e.g: 3 or contact)
       <br/>1. Portfolio<br/>2. Skills<br/>3. Contact</br></div>
       <br/>
       <form class="nodisplay" id="input-form" action="#"><span>root@kadirkaragoz:~$
@@ -27,3 +27,4 @@ title: Home
       <!-- <div class='cursor'>&#9610;</div> -->
     </div>
   </div>
+</div>
