--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: portfolio
-subtitle: My Professional Journey is Here
+subtitle: Some sample project is here
 ---
 
 <!-- Card1 Start here -->
