--- a/resume.html
+++ b/resume.html
@@ -5,9 +5,9 @@ subtitle: my cv is here
 ---
 <P></P>
 <div id="resume-download">
-<a class="btn btn-info" href="https://drive.google.com/open?id=1zQG67Dw37-YT-QV30PsF2J8qYo1KXDhJ" target="_blank"><i class="fa fa-download fa-2x"> Download</i></a>
+<a class="btn btn-info" href="https://drive.google.com/file/d/1IqW3Xi7f33nBxNme0i7TQj-WdTK3y8YT/view?usp=sharing" target="_blank"><i class="fa fa-download fa-2x"> Download</i></a>
 </div>
 <p></p>
 <div class="embed-responsive embed-responsive-1by1">
-  <iframe class="embed-responsive-item" src="https://drive.google.com/file/d/1zQG67Dw37-YT-QV30PsF2J8qYo1KXDhJ/preview"></iframe>
+  <iframe class="embed-responsive-item" src="https://drive.google.com/file/d/1IqW3Xi7f33nBxNme0i7TQj-WdTK3y8YT/preview"></iframe>
 </div>
