--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@ title: Home
       <div class="element4 bold nodisplay"></div>
       <div class="elementx nodisplay"></div>
       <p>
-      <div class="options nodisplay" > >>> Please select an option and press Enter. (e.g: 3 or contact)
+      <div class="options nodisplay" > >>> Please write an option and press Enter. (e.g: 3 or contact)
       <br/>1. Portfolio<br/>2. Skills<br/>3. Contact</br></div>
       <br/>
-      <form class="nodisplay" id="input-form" action="#"><span>root@kadirkaragoz:~$
-        <input type="text" id="ttext" autofocus="autofocus" autocomplete="off"></span><input id="tbtn" type="submit" style="visibility: hidden">
+      <form class="nodisplay" id="input-form" action="javascript:myFunction(); return false;"><span>root@kadirkaragoz:~$
+        <input type="text" id="ttext" autofocus="autofocus" autocomplete="off" autofocus></span><input id="tbtn" type="submit" style="visibility: hidden">
       </form></p>
       <!-- <div class='cursor'>&#9610;</div> -->
     </div>
